tests/abnormal/abnormal.exp
Error ---------------------------------------------------- toplevel_break.js:3:1

Error: toplevel_break.js:3
  3: break; // error, illegal
     ^^^^^^ Illegal break statement

Error ------------------------------------------------- toplevel_continue.js:3:1

Error: toplevel_continue.js:3
  3: continue; // error, illegal
     ^^^^^^^^^ Illegal continue statement

Error --------------------------------------------------- toplevel_return.js:3:1

Error: toplevel_return.js:3
  3: return; // error, illegal
     ^^^^^^ Illegal return statement


Found 3 errors
